style: correction z-index #48

--- a/web/themes/custom/openig/scss/_custom.scss
+++ b/web/themes/custom/openig/scss/_custom.scss
@@ -460,7 +460,6 @@ h2{
 
 // Carousel
 .slick{
-    z-index: 9;
     padding-bottom: 15px !important;
     .slick-list{
         padding-bottom: 10px !important;
